--- a/Web Development/Project of Apana College/Webpage.html
+++ b/Web Development/Project of Apana College/Webpage.html
@@ -55,10 +55,10 @@
             tempora. Neque quam corrupti sint dolorum aliquam dicta 
             impedit dolorem, temporibus ipsam atque excepturi, dolore ratione?</p>
         <p>
-        <a href="#">Home</a> &nbsp;&nbsp;|&nbsp;&nbsp;
-        <a href="#">&copy;Copyright</a> &nbsp;&nbsp;|&nbsp;&nbsp;
-        <a href="#">Privacy</a> &nbsp;&nbsp;|&nbsp;&nbsp;
-        <a href="#">Contact Us</a> 
+        <a target="_blank" href="#">Home</a> &nbsp;&nbsp;|&nbsp;&nbsp;
+        <a target="_blank" href="#">&copy;Copyright</a> &nbsp;&nbsp;|&nbsp;&nbsp;
+        <a target="_blank" href="#">Privacy</a> &nbsp;&nbsp;|&nbsp;&nbsp;
+        <a target="_blank" href="#">Contact Us</a> 
         </p>
 
     </footer>
