--- a/Web Development/Projects/Contact Us.html
+++ b/Web Development/Projects/Contact Us.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> 📞 Contact Details</title>
+    <title> 📞 Contact Us</title>
 </head>
 <body>
-    <h3>Contact Details</h3>
+    <h3>Contact Us</h3>
     <ul>
         <p>🏤 My Parmanent Address</p> 
         <p>📞 8637232238</p> 
