--- a/HTML/Projects/My Resume.html
+++ b/HTML/Projects/My Resume.html
@@ -15,6 +15,14 @@
             </td>
         </tr>
     </table>
+    <hr>
+    <h3>Books & Teachings</h3>
+    <ul>
+        <li>Dolor laboriosam molestiae obcaecati unde voluptatem reiciendis cum</li>
+        <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat nemo itaque molestiae nisi aspernatur molestias consectetur provident impedit odit explicabo.</li>
+        
+    </ul>
+
 
     <hr>
     <h3>Work Experience</h3>
