--- a/HTML/Projects/index.html
+++ b/HTML/Projects/index.html
@@ -67,8 +67,8 @@
 
     <hr>
 
-    <a href="My Hobbies.html"> My Hobbies</a> &nbsp;&nbsp;|&nbsp;&nbsp;
-    <a href="Contact Us.html">Contact Us</a>
+    <a href="hobbies.html"> My Hobbies</a> &nbsp;&nbsp;|&nbsp;&nbsp;
+    <a href="contact us.html">Contact Us</a>
     
 </body>
 </html>
