Add initial CV Website files

--- a/HTML/Projects/index.html
+++ b/HTML/Projects/index.html
@@ -8,7 +8,7 @@
 
     <table>
         <tr>
-            <td><img src="image/shakti Image.png" width="150" alt="Profile picture"></td>
+            <td><img src="image/shakti.png" width="150" alt="Profile picture"></td>
             <td><h2>Shakti Meher</h2>
                 <p><em>Founder of <a href="#">App Factory</a> </em> </p>
                 <p>Lorem, ipsum dolor sit 💡amet consectetur adipisicing ❤elit. </p>
