--- a/HTML/Projects/index.html
+++ b/HTML/Projects/index.html
@@ -68,7 +68,7 @@
     <hr>
 
     <a href="hobbies.html"> My Hobbies</a> &nbsp;&nbsp;|&nbsp;&nbsp;
-    <a href="contact us.html">Contact Us</a>
+    <a href="contact-me.html">Contact Us</a>
     
 </body>
 </html>
