--- a/HTML/My Resume.html
+++ b/HTML/My Resume.html
@@ -63,7 +63,10 @@
     <hr>
 
     <a href="#">My Hobbies</a>
-    <a href="#">Contact Us</a>
+    <a href="Contact Us.html">Contact Us</a>
+
+
+
     
 </body>
 </html>
