--- a/CSS/CSS - My Site/index.html
+++ b/CSS/CSS - My Site/index.html
@@ -9,12 +9,14 @@
     <link rel="icon" href="favicon.ico">
 </head>
 <body>
+    <img src="Images/cloud.png" alt="cloud1-image">
      <div class="top-container">
-        <h1>I Love Bacon</h1>
+        <h1>I <span class="line">Love</span> Bacon</h1>
         <p>I am a programmer</p>
     </div>
+    <img src="Images/cloud.png" alt="cloud2-image">
+    <img src="Images/mountain.png" alt="mountain-image">
     
-    <div class="middle-container"></div>
-    <div class="bottom-container"></div>
+    
 </body>
 </html>
