--- a/CSS/CSS - My Site/index.html
+++ b/CSS/CSS - My Site/index.html
@@ -9,14 +9,15 @@
     <link rel="icon" href="favicon.ico">
 </head>
 <body>
-    <img src="Images/cloud.png" alt="cloud1-image">
+    <center>
+    <img class="cloud1" src="Images/cloud.png" alt="cloud1-image">
      <div class="top-container">
         <h1>I <span class="line">Love</span> Bacon</h1>
         <p>I am a programmer</p>
     </div>
     <img src="Images/cloud.png" alt="cloud2-image">
     <img src="Images/mountain.png" alt="mountain-image">
-    
+    </center>
     
 </body>
 </html>
