--- a/CSS/CSS - POSITIONING/index.html
+++ b/CSS/CSS - POSITIONING/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Practice</title>
-    <link rel="stylesheet" href="css/styles.css">
-</head>
-<body >
-    <div class="container"></div>
-    <div class="blue"></div>
-    <div class="red"></div>
-    <div class="yellow"></div>
-</body>
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="blue"></div>
+      <div class="red"></div>
+      <div class="yellow"></div>
+    </div>
+    
+  </body>
 </html>
