--- a/CSS/CSS - POSITIONING/index.html
+++ b/CSS/CSS - POSITIONING/index.html
@@ -13,6 +13,25 @@
       <div class="red"></div>
       <div class="yellow"></div>
     </div>
-    
+    <p>hello</p>
+    <p>hello</p>
+    <p>hello</p>
+    <p>hello</p>
+    <p>hello</p>
+    <p>hello</p>
+    <p>hello</p>
+    <p>hello</p>
+    <p>hello</p>
+    <p>hello</p>
+    <p>hello</p>
+    <p>hello</p>
+    <p>hello</p>
+    <p>hello</p>
+    <p>hello</p>
+    <p>hello</p>
+    <p>hello</p>
+    <p>hello</p>
+    <p>hello</p>
+    <p>hello</p>
   </body>
 </html>
