--- a/CSS/CSS - My Site/index.html
+++ b/CSS/CSS - My Site/index.html
@@ -11,14 +11,13 @@
 </head>
 <body>
     <div class="topcontainer"></div>
+    <div class="top-container">
     <img class="topcloud" src="Images/cloud.png" alt="topcloud-image">
-     <div class="top-container">
         <h1>I'm Sense.</h1>
         <h2>a <span class="pro">pro</span>grammer.</h2>
-    </div>
     <img class="bottomcloud" src="Images/cloud.png" alt="bottomcloud-image">
     <img src="Images/mountain.png" alt="mountain-image">
-
+    </div>
     <div class="middle-container">
         <div class="profile">
           <img src="Images/Profile Picture.png" width="200px" alt="Profile Picture">
@@ -29,12 +28,12 @@
         <div class="skills">
           <h2>My Skills.</h2>
           <div class="skill-row">
-            <img class="coding" src="https://nima-jamalian.github.io/CV/images/WebDev.gif" width="400" alt="coding image">
+            <img class="code-img" src="https://nima-jamalian.github.io/CV/images/WebDev.gif" width="400" alt="coding image">
             <h3>Design & Development</h3>
-            <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+            <p>Lorem,ipsum dolor sit amet consectetur adipisicing elit. Corporis, quam. Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Lorem ipsum dolor sit amet. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
           </div>
           <div class="skill-row">
-            <img class="chillies" src="Images/chillies.png" alt="chillies">
+            <img class="chilli-img" src="Images/chillies.png" alt="chillies">
             <h3>Hot Wings Challenge</h3>
             <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
           </div>
