--- a/CSS/CSS - QR Code/qr-code-component-main/index.html
+++ b/CSS/CSS - QR Code/qr-code-component-main/index.html
@@ -1,34 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Outfit&family=Sacramento&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Outfit&family=Sacramento&display=swap"
+    rel="stylesheet">
 
   <link rel="stylesheet" href="styles.css">
 
-  
+
   <title>Frontend Mentor | QR code component</title>
 
-  
+
 </head>
 
 <body>
   <div class="main">
-<img class="square" src="images/image-qr-code.png">
-  <h1>Improve your front-end  skills by building projects</h1> 
-  <p>Scan the QR code to visit Frontend
-   Mentor and take your coding skills to
-   the next level</p>
-</div>
-  <footer class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://www.linkedin.com/in/clea-carty-50930a26/">Clea Carty</a>.
+    <img class="square" src="images/image-qr-code.png">
+    <h1>Improve your front-end skills by building projects</h1>
+    <p>Scan the QR code to visit Frontend
+      Mentor and take your coding skills to
+      the next level</p>
   </div>
+  <footer class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="https://www.linkedin.com/in/clea-carty-50930a26/">Clea Carty</a>.
+    </div>
 </body>
 
 </html>
