--- a/Bootstrap/TinDog-Start-master/index.html
+++ b/Bootstrap/TinDog-Start-master/index.html
@@ -4,14 +4,46 @@
 <head>
   <meta charset="utf-8">
   <title>TinDog</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
+  <body>
+    <div class="row">
+        <div class="col" style="background-color: red; border: 1px solid;">col</div>
+        <div class="col" style="background-color: red; border: 1px solid;">col</div>
+    </div>
+</body>
 
+
+<div style="color: blue;></div>
   <section id="title">
 
     <!-- Nav Bar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="">tindog</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+      <ul class="navbar-nav ms-auto">
+          <li class="nav-items">
+              <a class="nav-link" href="">Home</a>
+          </li>
+          <li class="nav-items">
+              <a class="nav-link" href="">Features</a>
+          </li>
+          <li class="nav-items">
+              <a class="nav-link" href="">Pricing</a>
+          </li>
+          <li class="nav-items">
+              <a class="nav-link" href="">Contact</a>
+          </li>
+      </ul>
+      </div>
+    </nav>
 
 
 
