--- a/Bootstrap/Grid/index.html
+++ b/Bootstrap/Grid/index.html
@@ -21,10 +21,13 @@
 </head>
 
 <body>
+    <!-- Non responsive -->
     <div class="row">
         <div class="col" style="background-color: red; border: 1px solid">col</div>
         <div class="col" style="background-color: red; border: 1px solid">col</div>
     </div>
+
+    
     <div class="row">
         <div class="col-6" style="background-color: yellow; border: 1px solid">col6</div>
         <div class="col-3" style="background-color: yellow; border: 1px solid">col3</div>
