--- a/Bootstrap/TinDog-Start-master/index.html
+++ b/Bootstrap/TinDog-Start-master/index.html
@@ -35,9 +35,9 @@
 </head>
 
 <body>
-  <section id="title">
+  <section class="coloured-section" id="title">
     <div class="container-fluid">
-      
+
       <!-- Nav Bar -->
 
       <nav class="navbar navbar-expand-lg navbar-dark">
@@ -49,13 +49,13 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
           <ul class="navbar-nav ms-auto">
             <li class="nav-items">
-              <a class="nav-link" href="">Contact</a>
+              <a class="nav-link" href="#footer">Contact</a>
             </li>
             <li class="nav-items">
-              <a class="nav-link" href="">Pricing</a>
+              <a class="nav-link" href="#pricing">Pricing</a>
             </li>
             <li class="nav-items">
-              <a class="nav-link" href="">Download</a>
+              <a class="nav-link" href="#cta">Download</a>
             </li>
           </ul>
         </div>
@@ -66,7 +66,7 @@
 
       <div class="row">
         <div class="col-lg-6">
-          <h1>Meet new and interesting dogs nearby.</h1>
+          <h1 class="big-heading">Meet new and interesting dogs nearby.</h1>
           <button type="button" class="btn btn-dark btn-lg download-button"> <i class="fab fa-apple"></i>
             Download</button>
           <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i>
@@ -83,24 +83,26 @@
 
 
   <!-- Features -->
-  <section id="features">
-    <div class="row">
-      <div class="feature-box col-lg-4">
-        <i class="fa fa-sharp fa-regular fa-check-circle fa-4x icon "></i>
-        <h3> Easy to use.</h3>
-        <p>So easy to use, even your dog could do it.</p>
-      </div>
+  <section class="white-section" id="features">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="feature-box col-lg-4">
+          <i class="fa fa-sharp fa-regular fa-check-circle fa-4x icon "></i>
+          <h3 class="feature-title"> Easy to use.</h3>
+          <p>So easy to use, even your dog could do it.</p>
+        </div>
 
-      <div class="feature-box col-lg-4">
-        <i class="fa fa-solid fa-bullseye icon fa-4x icon"></i>
-        <h3> Elite Clientele</h3>
-        <p>We have all the dogs, the greatest dogs.</p>
-      </div>
+        <div class="feature-box col-lg-4">
+          <i class="fa fa-solid fa-bullseye icon fa-4x icon"></i>
+          <h3 class="feature-title"> Elite Clientele</h3>
+          <p>We have all the dogs, the greatest dogs.</p>
+        </div>
 
-      <div class="feature-box col-lg-4">
-        <i class="fa fa-solid fa-heart icon fa-4x icon"></i>
-        <h3> Guaranteed to work.</h3>
-        <p>Find the love of your dog's life or your money back.</p>
+        <div class="feature-box col-lg-4">
+          <i class="fa fa-solid fa-heart icon fa-4x icon"></i>
+          <h3 class="feature-title"> Guaranteed to work.</h3>
+          <p>Find the love of your dog's life or your money back.</p>
+        </div>
       </div>
   </section>
 
@@ -108,12 +110,12 @@
 
   <!-- Testimonials -->
 
-  <section id="testimonials">
+  <section class="coloured-section" id="testimonials">
     <div id="testimonial-carousel" class="carousel slide" data-bs-interval="4000" ; data-bs-pause="hover" ;
       data-bs-ride="false">
       <div class="carousel-inner">
 
-        <div class="carousel-item active">
+        <div class="carousel-item active container-fluid">
           <h2 class="testimonial-text">
             I no longer have to sniff other dogs for love. I've found the hottest
             Corgi on TinDog. Woof.
@@ -122,7 +124,7 @@
           <em>Pebbles, New York</em>
         </div>
 
-        <div class="carousel-item">
+        <div class="carousel-item container-fluid">
           <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of
             their life. I think.</h2>
           <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
@@ -151,7 +153,7 @@
 
   <!-- Press -->
 
-  <section id="press">
+  <section class="coloured-section" id="press">
     <img class="press-logo" src="images/tnw.png" alt="tnw-logo" />
     <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo" />
     <img class="press-logo" src="images/mashable.png" alt="mashable-logo" />
@@ -161,77 +163,87 @@
 
   <!-- Pricing -->
 
-  <section id="pricing">
+  <section class="white-section" id="pricing">
 
-    <h2>A Plan for Every Dog's Needs</h2>
+    <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
 
     <div class="row">
       <div class="pricing-column col-lg-4 col-md-6">
-          <div class="card">
-            <div class="card-header" height: 50px>
-              <h3>Chihuahua</h3>
-            </div>
-            <div class="card-body">
-              <h2>Free</h2>
-              <p>5 Matches Per Day</p>
-              <p>10 Messages Per Day</p>
-              <p>Unlimited App Usage</p>
-              <button type="button" class="btn btn-outline-dark">Sign Up</button>
-            </div>
+        <div class="card">
+          <div class="card-header" height: 50px>
+            <h3>Chihuahua</h3>
           </div>
-        </div>
-
-
-        <div class="pricing-column col-lg-4 col-md-6">
-          <div class="card">
-            <div class="card-header" height: 50px>
-              <h3>Labrador</h3>
-            </div>
-            <div class="card-body">
-              <h2>$49 / mo</h2>
-              <p>Unlimited Matches</p>
-              <p>Unlimited Messages</p>
-              <p>Unlimited App Usage</p>
-              <button type="button" class="btn btn-dark">Sign Up</button>
-            </div>
-          </div>
-        </div>
-
-
-        <div class="pricing-column col-lg-4 col-md-6">
-          <div class="card">
-            <div class="card-header" height: 50px>
-              <h3>Mastiff</h3>
-            </div>
-            <div class="card-body">
-              <h2>$99 / mo</h2>
-              <p>Pirority Listing</p>
-              <p>Unlimited Matches</p>
-              <p>Unlimited Messages</p>
-              <p>Unlimited App Usage</p>
-              <button type="button" class="btn btn-dark">Sign Up</button>
-            </div>
+          <div class="card-body">
+            <h2 class="price-text">Free</h2>
+            <p>5 Matches Per Day</p>
+            <p>10 Messages Per Day</p>
+            <p>Unlimited App Usage</p>
+            <button type="button" class="btn btn-outline-dark">Sign Up</button>
           </div>
         </div>
       </div>
+
+
+      <div class="pricing-column col-lg-4 col-md-6">
+        <div class="card">
+          <div class="card-header" height: 50px>
+            <h3>Labrador</h3>
+          </div>
+          <div class="card-body">
+            <h2 class="price-text">$49 / mo</h2>
+            <p>Unlimited Matches</p>
+            <p>Unlimited Messages</p>
+            <p>Unlimited App Usage</p>
+            <button type="button" class="btn btn-dark">Sign Up</button>
+          </div>
+        </div>
+      </div>
+
+
+      <div class="pricing-column col-lg-4 col-md-6">
+        <div class="card">
+          <div class="card-header" height: 50px>
+            <h3>Mastiff</h3>
+          </div>
+          <div class="card-body">
+            <h2 class="price-text">$99 / mo</h2>
+            <p>Pirority Listing</p>
+            <p>Unlimited Matches</p>
+            <p>Unlimited Messages</p>
+            <p>Unlimited App Usage</p>
+            <button type="button" class="btn btn-dark">Sign Up</button>
+          </div>
+        </div>
+      </div>
+    </div>
     </div>
   </section>
 
 
   <!-- Call to Action -->
 
-  <section id="cta">
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+  <section class="coloured-section" id="cta">
+    <div class="container-fluid">
+      <h3 class="big-heading">Find the True Love of Your Dog's Life Today.</h3>
+      <button type="button" class="download-button btn btn-lg btn-dark"><i class="fab fa-apple"></i> Download</button>
+      <button type="button" class="download-button btn btn-lg btn-light"><i class="fab fa-google-play"></i>
+        Download</button>
+    </div>
   </section>
 
 
   <!-- Footer -->
 
-  <footer id="footer">
-    <p>© Copyright TinDog</p>
+  <footer class="white-section" id="footer">
+    <div class="container-fluid">
+
+      <i class="fab fa-brands fa-twitter social-icon"></i>
+      <i class="fab fa-brands fa-instagram social-icon"></i>
+      <i class="fab fa-brands fa-facebook social-icon"></i>
+      <i class="fa fa-envelope social-icon"></i>
+      <p class="copyright">© Copyright TinDog</p>
+    </div>
   </footer>
 </body>
 
