--- a/Boss Level Challenge 1 - The Dicee Game/Try/index.html
+++ b/Boss Level Challenge 1 - The Dicee Game/Try/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Dicee</title>
+    <title>🎲 Dicee Game</title>
 </head>
 <body>
     <div class="container">
