--- a/jQuery/index.html
+++ b/jQuery/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     <h1>Hello</h1>
+    <img src="drum.png" alt="">
+    <a href="http://www.google.com">Search</a>
 
     <button>click me</button>
     <button>click me</button>
@@ -16,6 +18,8 @@
     <button>click me</button>
     <button>click me</button>
     
+    <input type="text">
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="index.js"></script>
